# Hybrid-RAG-Chatbot-Prototype

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/: copilot-instructions.md
data/docs/: sample.md
scripts/: install_uv.sh
src/hybrid_rag/: __init__.py  cli.py  config.py  graph_store.py  ingest.py  pipeline.py  vector_store.py
src/hybrid_rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
